# matmul

./: CMakeLists.txt  README.md  mat_mul.cpp  mat_mul.cu
matmul_demo/: CMakeLists.txt  mat_mul.cpp
